--- a/2019-12-26-如何管理多个SSH Key并可进行连接？.md
+++ b/2019-12-26-如何管理多个SSH Key并可进行连接？.md
@@ -21,7 +21,7 @@
 
 ​        最后生成两个key的结果如图所示：
 
-
+![生成两个key的结果](https://github.com/LGDHuaOPER/essay-by-lgdhuafeeng/blob/master/images/2019-12-26-2055.png)
 
 ### 3.修改配置文件
 
@@ -40,7 +40,7 @@
         IdentityFile ~/.ssh/id_rsa_github
 ​        其中 Host 字段任意填写，标志出区别就好，HostName 字段需要填写公司 gerrit 地址，如何去找呢？在我们项目根目录下的 .git/config 里，如图
 
-
+![](https://github.com/LGDHuaOPER/essay-by-lgdhuafeeng/blob/master/images/2019-12-26-2102.png)
 
 ​        shiconghua 是我的 gerrit 用户名，所以是取@之后端口号之前的地址，然后配置里的 Port 字段就填写这个数字端口（默认22）。
 
@@ -65,7 +65,11 @@
 
 ​        我们可以用ssh来测试连接。
 
+![测试连接gerrit](https://github.com/LGDHuaOPER/essay-by-lgdhuafeeng/blob/master/images/2019-12-26-2116.png)
+
 ​        可以看到显示了我们配置的用户名，并且显示了successfully，连接成功！
+
+![测试连接github](https://github.com/LGDHuaOPER/essay-by-lgdhuafeeng/blob/master/images/2019-12-26-2124.png)
 
 ​        同样，我们看到 github 也连接成功！
 
