[2021-10-28 23:17]feat: update one .md

--- a/2021-10-21-axios 如何缓存请求.md
+++ b/2021-10-21-axios 如何缓存请求.md
@@ -1,17 +1,245 @@
 # axios 如何缓存请求
-## 前言
+## 1. 前言
 ​        为什么要缓存请求数据呢？这是因为在缓存未失效时，我们可以直接使用已缓存的数据，而不需发起请求从服务端获取数据，这样不仅可以减少 HTTP 请求而且还能减少等待时间从而提高用户体验。
 ​        那么有了请求缓存功能，就要对缓存命中进行定义，我定义的缓存命中是指：http请求的url相同、请求参数相同、请求类型（方法）相同，以上三者都相同的情况下，就视为缓存允许命中，最后根据缓存过期时间，判断是否获取最新数据，还是从缓存中取。
 ​        那么，缓存又是什么呢？在计算机中，缓存是一个高速数据存储层，其中存储了数据子集，且通常是**短暂性**存储，这样日后再次请求该数据时，速度要比访问数据的主存储位置快。通过缓存，你可以高效地重用之前检索或计算的数据。
 
-## 如何设计一个缓存
+## 2. 如何设计一个缓存
 ​        一个缓存需要实现如下功能点：
 - 从缓存中获取指定 key 对应的值
 - 从缓存中删除指定 key 对应的值
 - 清空已缓存的数据
 - 保存键值对，同时支持设置缓存的最大时间
 
-## 如何包装默认适配器
+## 3. 如何包装默认适配器
 ​        由于 axios 需要同时支持浏览器和 Node.js 环境，所以它引入了[适配器模式（Adapter Pattern）](https://baike.baidu.com/item/%E9%80%82%E9%85%8D%E5%99%A8%E6%A8%A1%E5%BC%8F/10218946?fr=aladdin)。对于浏览器环境来说，它通过封装 XMLHttpRequest API 来发送 HTTP 请求，而对于 Node.js 环境来说，它通过封装 Node.js 内置的 http 和 https 模块来发送 HTTP 请求。
-​        在 axios 源码
+​        在 axios 源码 lib/adapters/xhr.js 中（省略部分代码）：
+```js
+module.exports = function xhrAdapter(config) {
+  return new Promise(function dispatchXhrRequest(resolve, reject) {
+    var requestData = config.data;
+    var requestHeaders = config.headers;
 
+    var request = new XMLHttpRequest();
+
+    var fullPath = buildFullPath(config.baseURL, config.url);
+    request.open(config.method.toUpperCase(), buildURL(fullPath, config.params, config.paramsSerializer), true);
+
+    // Listen for ready state
+    request.onreadystatechange = function handleLoad() {};
+
+    // Handle browser request cancellation (as opposed to a manual cancellation)
+    request.onabort = function handleAbort() {};
+
+    // Handle low level network errors
+    request.onerror = function handleError() {};
+
+    // Handle timeout
+    request.ontimeout = function handleTimeout() {};
+
+    // Send the request
+    request.send(requestData);
+  });
+};
+```
+​        lib/defaults.js 中：
+```js
+function getDefaultAdapter() {
+  var adapter;
+  if (typeof XMLHttpRequest !== 'undefined') {
+    // For browsers use XHR adapter
+    adapter = require('./adapters/xhr');
+  } else if (typeof process !== 'undefined' && Object.prototype.toString.call(process) === '[object process]') {
+    // For node use HTTP adapter
+    adapter = require('./adapters/http');
+  }
+  return adapter;
+}
+```
+​        可以看到，axios 源码会针对不同的环境使用不一样的 adapter。
+​        当全局作用域含有 XMLHttpRequest 对象时，axios 会使用 xhrAdapter，而在 xhrAdapter 适配器内部，最终会使用 XMLHttpRequest API 来发送 HTTP 请求。为了实现缓存请求数据的功能，我们可以考虑通过高阶函数（Wrapper）来增强 xhrAdapter 默认适配器的功能。
+
+### 3.1 实现生成 key 的函数
+首先明确一点，我们一般是针对获取数据的接口进行请求缓存，而增加、修改、删除等操作的接口我们一般不做请求存储，获取数据的接口的请求方法一般为 get，get 方法一般不传递 response body，所以我们可以定义一个默认的 genKey 方法，同时保留用户自定义生成 key 的能力。
+```js
+import buildFullPath from 'axios/lib/core/buildFullPath'
+import buildURL from 'axios/lib/helpers/buildURL'
+import { sortObjectByProp } from '@lgd-utils/object'
+
+function genKey (config) {
+  return buildURL(buildFullPath(config.baseURL, config.url), sortObjectByProp(config.params), config.paramsSerializer)
+}
+```
+
+### 3.2 定义 validCacheLike 函数
+我们可以默认配置一个 cache，同时保留用户自定义 cache 的能力，所以需要一个验证用户自定义 cache 是否符合规则的函数，以便后续使用 cache 的接口进行操作。
+```ts
+function validCacheLike(cache?: CacheLike<unknown>): boolean {
+  return !!(
+    cache &&
+    cache.set &&
+    cache.get &&
+    (cache.del || cache.delete) &&
+    cache.keys &&
+    typeof cache.get === 'function' &&
+    typeof cache.set === 'function' &&
+    (typeof cache.del === 'function' || typeof cache.delete === 'function') &&
+    typeof cache.keys === 'function'
+  )
+}
+```
+
+### 3.3 定义 adapterCacheWrapper 函数
+​        为了让用户能够更灵活地控制数据缓存的功能，我们定义了一个 cacheAdapterEnhancer 函数，该函数支持两个参数：
+- adapter：预增强的 Axios 适配器对象
+- options：缓存配置对象，该对象支持以下属性
+```js
+const {
+  cacheDelWhenError, // 自定义的当reject时删除缓存的行为
+  cacheKey, // 自定义的生成key的方法
+  cacheSetArgMaxAge, // 设置缓存时的 maxAge 参数
+  defaultUseCache = new LRU({
+    max: 100,
+    maxAge: 1000 * 60 * 5,
+  }), // 默认使用的 cache
+  disableCache, // 禁用缓存
+  enableCache, // 启用缓存
+  enabledByDefault, // 默认启用
+  forceUpdateCache, // 强制刷新缓存
+  onCacheAdd, // 缓存添加时的回调函数
+  useCache, // 自定义使用的 cache
+} = options
+```
+​        此时，我们可以构造出 adapterCacheWrapper 函数。
+```ts
+import LRU from 'lru-cache'
+import lodashGet from 'lodash/get'
+import lodashIsFunction from 'lodash/isFunction'
+import lodashIsString from 'lodash/isString'
+import { AxiosAdapter, AxiosRequestConfig, default as axios } from 'axios'
+
+import { disableEnable, nilTo, attemptFunc, assertValue } from '@lgd-utils/utils'
+import { validCacheLike } from '@lgd-utils/validate'
+import { omitNil } from '@lgd-utils/object'
+
+function cacheWrapper(
+  adapter: AxiosAdapter | undefined = axios.defaults.adapter,
+  options: CacheWrapperOptions | undefined = {},
+): AxiosAdapter {
+  const {
+      cacheDelWhenError, // 自定义的当reject时删除缓存的行为
+      cacheKey, // 自定义的生成key的方法
+      cacheSetArgMaxAge, // 设置缓存时的 maxAge 参数
+      defaultUseCache = new LRU({
+        max: 100,
+        maxAge: 1000 * 60 * 5,
+      }), // 默认使用的 cache
+      onCacheAdd, // 缓存添加时的回调函数
+      useCache, // 自定义使用的 cache
+    } = options
+
+  return (config: AxiosRequestConfig) => {
+    const {
+      baseURL,
+      data,
+      method,
+      params,
+      paramsSerializer,
+      url,
+      disableCache, // 禁用缓存
+      enableCache, // 启用缓存
+      enabledByDefault, // 默认启用
+      forceUpdateCache, // 强制刷新缓存
+     } = config
+    const _enabledByDefault = attemptFunc(enabledByDefault, options, config)
+    const _enableCache = ['get', void 0].includes(method)
+      ? disableEnable(disableCache, enableCache, nilTo(_enabledByDefault as boolean | undefined, true) as boolean, {
+          firstAssert: 'DISABLE',
+        })
+      : disableEnable(disableCache, enableCache, nilTo(_enabledByDefault as boolean | undefined, false) as boolean)
+
+    if (_enableCache) {
+      const cache = validCacheLike(useCache) ? useCache : defaultUseCache
+
+      const _key = genKey(config)
+      const key = nilTo(
+        attemptFunc(
+          cacheKey,
+          omitNil({
+            baseURL,
+            data,
+            method,
+            params,
+            url,
+          }),
+          _key,
+          cache,
+          options,
+          config,
+        ),
+        _key,
+      )
+
+      let responsePromise = cache.get(key)
+
+      if (!responsePromise || forceUpdateCache) {
+        responsePromise = (async () => {
+          try {
+            return await (adapter as AxiosAdapter)(config)
+          } catch (reason) {
+            if (cacheDelWhenError === true) {
+              cache.del(key)
+            } else if (lodashIsFunction(cacheDelWhenError)) {
+              cacheDelWhenError(reason, key, cache, options, config)
+            } else if (lodashIsString(cacheDelWhenError)) {
+              cache.del(cacheDelWhenError)
+            } else {
+              cache.keys().forEach((_k: string) => {
+                if (assertValue(_k, cacheDelWhenError)) {
+                  cache.del(_k)
+                }
+              })
+            }
+
+            throw reason
+          }
+        })()
+
+        const maxAge = attemptFunc(cacheSetArgMaxAge, key, cache, options, config)
+        cache.set(key, responsePromise, maxAge)
+        attemptFunc(onCacheAdd, [key, () => cache.del(key)], cache, options, config)
+
+        return responsePromise
+      }
+
+      return responsePromise
+    }
+
+    return (adapter as AxiosAdapter)(config)
+  }
+}
+```
+
+## 4. 使用 adapterCacheWrapper 函数
+### 4.1 使用 adapterCacheWrapper 增强创建 axios 实例时传递的 adapter 参数
+```js
+import axios from 'axios';
+import { adapterCacheWrapper } from '@lgd-utils/axios';
+
+const http = axios.create({
+	baseURL: '/',
+	// cache will be enabled by default when http method is get
+	adapter: adapterCacheWrapper(axios.defaults.adapter)
+});
+```
+
+### 4.2 使用增强后的 axios 实例
+```js
+http.get('/api/userInfo'); // make real http request
+http.get('/api/userInfo'); // use the response from the cache of previous request, without real http request made
+http.get('/api/userInfo', { forceUpdateCache: true }); // will forceUpdate the cache and the the real http request invoked
+http.get('/api/userInfo', { disableCache: true }); // disable cache manually and the the real http request invoked
+```
+
+## 5. 总结
+​        通过 adapterCacheWrapper 增强创建 axios 实例时传递的 adapter 参数，可以使得所创建的 axios 实例具备请求缓存的能力，同时用户可以自定义生成 key 的方法，运行时选择关闭缓存或者强制刷新缓存，具备可扩展性。
