[2021-11-15 11:14]feat: add one .md

--- a/2021-10-21-axios 如何缓存请求.md
+++ b/2021-10-21-axios 如何缓存请求.md
@@ -90,7 +90,7 @@ function validCacheLike(cache?: CacheLike<unknown>): boolean {
 ```
 
 ### 3.3 定义 adapterCacheWrapper 函数
-​        为了让用户能够更灵活地控制数据缓存的功能，我们定义了一个 cacheAdapterEnhancer 函数，该函数支持两个参数：
+​        为了让用户能够更灵活地控制数据缓存的功能，我们定义了一个 adapterCacheWrapper 函数，该函数支持两个参数：
 - adapter：预增强的 Axios 适配器对象
 - options：缓存配置对象，该对象支持以下属性
 ```js
